--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "dev": "webpack-dev-server",
-    "build": "webpack",
+    "build": "webpack --mode production",
     "watch": "webpack --watch --progress --colors --display-modules"
   },
   "files": [],
